# PRF_Ratios_syn

./: .gitignore  README.md  processing_tsv_utils.py  pyproject.toml  requirements.txt  rooting_snps_utils.py  synonymous_sites_utils.py  tsv_to_sfs.py
PRF_Ratios_syn/: 01_Data_Preprocessing_Drosophila.ipynb  02_Exploratory_Analyses_Drosophila.ipynb  02_Exploratory_Analysis_Drosophila.ipynb  03_Codon_Analyses_Drosophila.ipynb  04_SFS_Downsampling_Drosophila.ipynb  codon_analyses.py  codon_changes_dict.py  data_processing.py  exploratory_analyses.py  sfs_analyses.py
notebooks/: Synonymous_Mutation_Analysis_Drosophila.ipynb
results/dictionaries/: dgrp2_synonymous_dict.pkl  dpgp3_synonymous_dict.pkl
results/sfs/: dgrp2_downsampled_sfss.json  dgrp2_downsampled_sfss.pickle  dpgp3_downsampled_sfss.json  dpgp3_downsampled_sfss.pickle
scripts/: run_processing.py  run_processing_scratch.py
scripts/temp_src/: implementations.py  process_tsv_utils.py  synonymous_sites_utils.py  tsv_to_sfs.py
src/: synonymous_sfss.py
