[tool.poetry]
name = "prf-ratios-syn"
version = "0.1.0"
description = "Repository documenting the analysis of synonymous SFS with PRF-Ratios"
authors = ["Vitor Pavinato <vitor.pavi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26"
pandas = "^2.2"
scipy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
