[tool.poetry]
name = "prf-ratios-syn"
version = "0.1.0"
description = "Repository documenting the analysis of synonymous SFS with PRF-Ratios"
authors = ["Vitor Pavinato <vitor.pavi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
debugpy = "^1.8.1"
pytest = "^8.2.1"
numpy = "^1.26.4"
scipy = "^1.13.1"
pandas = "^2.2.2"
jupyterlab = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
